--- a/src/routes/Home/styles.module.css
+++ b/src/routes/Home/styles.module.css
@@ -32,7 +32,7 @@
   top: 0;
   height: 70px;
   border-bottom: 1px solid rgb(108, 95, 95);
-  z-index: 2000;
+  z-index: 1002;
   /* background-color: aqua; */
 }
 
